Prevent scrolling the page behind the popup

--- a/css/main.less
+++ b/css/main.less
@@ -183,6 +183,7 @@ main {
     }
 
     .handy-scroll-body {
+        overscroll-behavior:contain;
         height:550px;
         width:100%;
     }
